--- a/responsive-web-page/index.html
+++ b/responsive-web-page/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>GEOG 328 LAB 02 EXAMPLE</title>
+    <title>Sonic Adventure 2 Speedruns</title>
 
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
@@ -19,9 +19,9 @@
         <a class="active" href="index.html">Abstract</a>
 
         <!-- Links to other sections -->
-        <a href="section1.html">Section 1</a>
-        <a href="section2.html">Section 2</a>
-        <a href="section3.html">Section 3</a>
+        <a href="section1.html">Hero/Dark Story</a>
+        <a href="section2.html">180 Emblems</a>
+        <a href="section3.html">Any%</a>
 
         <!-- Additional links -->
         <a href="see_also.html">See Also</a>
@@ -35,19 +35,30 @@
 
     <!-- Page content -->
     <div class="content">
-        <!-- Abstract section -->
-        This is the abstract section.
+        <!-- Abstract section --> 
+        <h2>Sonic Adventure 2 Speedruns</h2>
+        <i>Sonic Adventure 2</i> <a href="https://en.wikipedia.org/wiki/Speedrunning">Speedruns</a> involve players completing the game as quickly as possible. 
+        This is achieved in videogames often by using techniques and glitches to minimize time finishing the game. The speedrunning community for 
+        <i>Sonic Adventure 2</i> focuses on different categories, such as the most popular category "<i>Hero Story</i>" and subcategories like "<i>180 Emblems</i>"
+        and "<i>Any%</i>". Players will often compete for world record times and engage in a community dedicated to mastering skills within the game. 
+        Speedrunning <i>Sonic Adventure 2</i> showcases a different perspective on how to beat the game through community efforts to find new techniques and 
+        glitches to achieve the fastest possible completion times. <i>Sonic Adventure 2</i> was also used as a reference for the live action
+        <i>Sonic the Hedgehog 3</i> film. <a href="https://www.gamesradar.com/sonic-3-tease-sonic-adventure-2-inspiration/">[1]</a>
         <br>
         <br>
         <!-- Displaying the course cover image in a scaled size -->
-        Here is the course cover image in a scaled size:
+        Dreamcast cover art of Sonic Adventure 2 by Yuji Uekawa:
         <br>
-        <img src="img/cover.jpg" style="width: 100%; height: auto;">
+        <img src="https://upload.wikimedia.org/wikipedia/en/9/99/Sonic_Adventure_2_cover.png" style="width: 50%; height: auto;">
         <br>
         <br>
-        <!-- Displaying the course cover image in its original size -->
-        Here is the course cover image in its original size:
-        <img src="img/cover.jpg">
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">All Links on Page</button>
+            <div id="myDropdown" class="dropdown-content">
+              <a href="#">https://en.wikipedia.org/wiki/Speedrunning</a>
+              <a href="#">https://www.gamesradar.com/sonic-3-tease-sonic-adventure-2-inspiration/</a>
+            </div>
+          </div>
     </div>
 
     <!-- Including the main.js file for JavaScript functionality -->
