--- a/responsive-web-page/section3.html
+++ b/responsive-web-page/section3.html
@@ -17,11 +17,11 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Abstract</a>
-        <a href="section1.html">Section 1</a>
-        <a href="section2.html">Section 2</a>
+        <a href="section1.html">Hero/Dark Story</a>
+        <a href="section2.html">180 Emblems</a>
 
         <!-- Active link pointing to the section3.html page -->
-        <a class="active" href="section3.html">Section 3</a>
+        <a class="active" href="section3.html">Any%</a>
 
         <a href="see_also.html">See Also</a>
         <a href="references.html">References</a>
@@ -35,7 +35,22 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 3 content -->
-        This is section 3.
+        <h2>Any%</h2>
+        <p>
+            A "<b>Any%</b>" speedrun is a staple among the speedrunning community as a whole with it being a popular choice for players across all videogames. 
+            The speedrunning category measures the time it takes to beat a game no matter how much of it is played. In the context of <i>Sonic Adventure 2</i>, 
+            Any% speedruns may consist of 100% completion of clearing levels or collecting emblems. Any% speedruns also include beating the game with or 
+            without skips often separating runs into subcategories like "<b>skipless</b>" or "<b>glitchless</b>". The most popular approach to an Any% speedrun 
+            is to use skips and glitches to find the fastest time possible to beat the game. The Any% category is a staple in the general speedrunning 
+            community and <i>Sonic Adventure 2</i> speedrunning is no exception. The Any% category provides <i>Sonic Adventure 2</i> speedrunners creative freedom 
+            to push boundaries on how fast the game can be beat.
+        </p>
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">All Links on Page</button>
+            <div id="myDropdown" class="dropdown-content">
+              <a href="#">https://www.speedrun.com/sa2b?h=Hero_Story-new-game&x=l824jg25-onvz40lm.4qy7x74q</a>
+            </div>
+          </div>
     </div>
 
     <!-- Including the main.js file for JavaScript functionality -->
