Revise index.html for Peter Pham Portfolio
Updated the content of the index.html file to reflect a new portfolio focus and changed the title.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Sonic Adventure 2 Speedruns</title>
+    <title>Peter Pham Portfolio</title>
 
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
@@ -39,14 +39,10 @@
     <!-- Page content -->
     <div class="content">
         <!-- Abstract section --> 
-        <h2>Sonic Adventure 2 Speedruns</h2>
-        <i>Sonic Adventure 2</i> <a href="https://en.wikipedia.org/wiki/Speedrunning" target="_blank">Speedruns</a> involve players completing the game as quickly as possible. 
-        This is achieved in videogames often by using techniques and glitches to minimize time finishing the game. The speedrunning community for 
-        <i>Sonic Adventure 2</i> focuses on different categories, such as the most popular category "<i>Hero Story</i>" and subcategories like "<i>180 Emblems</i>"
-        and "<i>Any%</i>". Players will often compete for world record times and engage in a community dedicated to mastering skills within the game. 
-        Speedrunning <i>Sonic Adventure 2</i> showcases a different perspective on how to beat the game through community efforts to find new techniques and 
-        glitches to achieve the fastest possible completion times. <i>Sonic Adventure 2</i> was also used as a reference for the live action
-        <i>Sonic the Hedgehog 3</i> film. <a href="https://www.gamesradar.com/sonic-3-tease-sonic-adventure-2-inspiration/" target="_blank">[1]</a>
+        <h2>Abstract</h2>
+        My work focuses on transforming geographic and demographic data into clear, meaningful insights through maps, dashboards, and web-based visualizations. 
+        This portfolio highlights academic research and applied projects that demonstrate my technical skills, analytical thinking, and commitment to data-driven 
+        decision making in areas such as equity, transportation, and environmental analysis.
         <br>
         <br>
         <!-- Displaying the course cover image in a scaled size -->
@@ -58,7 +54,7 @@
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Useful Links for Page</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="https://en.wikipedia.org/wiki/Speedrunning" target="_blank">https://en.wikipedia.org/wiki/Speedrunning</a>
+              <a href="www.linkedin.com/in/peter-pham-984817390" target="_blank">www.linkedin.com/in/peter-pham-984817390</a>
               <a href="https://www.gamesradar.com/sonic-3-tease-sonic-adventure-2-inspiration/" target="_blank">https://www.gamesradar.com/sonic-3-tease-sonic-adventure-2-inspiration/</a>
             </div>
           </div>
@@ -70,3 +66,4 @@
 </body>
 
 </html>
+
