Change title and content of section1.html
Updated the title and content of section1.html to reflect a new topic.

--- a/section1.html
+++ b/section1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Sonic Adventure 2 Speedruns</title>
+    <title>Peter Pham Portfolio</title>
 
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
@@ -22,7 +22,7 @@
         <a href="index.html">Abstract</a>
 
         <!-- Active link pointing to the section1.html page -->
-        <a class="active" href="section1.html">Hero/Dark Story</a>
+        <a class="active" href="section1.html">Geography of Housing</a>
 
         <a href="section2.html">180 Emblems</a>
         <a href="section3.html">Any%</a>
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
