--- a/section1.html
+++ b/section1.html
@@ -42,8 +42,11 @@
         <button class="accordion">Lab 1</button>
         <div class="panel">
             <p><strong>Lab 1</strong>. Geography of Housing: 
-                <a href="https://drive.google.com/file/d/1a2PFFvFBLSDf4atXnXTvnKaPlXQNyOXD/view" target="_blank">https://drive.google.com/file/d/1a2PFFvFBLSDf4atXnXTvnKaPlXQNyOXD/view</a></p>
-        </div>
+            <iframe src="https://drive.google.com/file/d/1a2PFFvFBLSDf4atXnXTvnKaPlXQNyOXD/preview"></iframe>
+            <a class="open-link" href="https://drive.google.com/file/d/1a2PFFvFBLSDf4atXnXTvnKaPlXQNyOXD/view" target="_blank">
+              Open Lab 1 PDF in new tab
+            </a>
+          </div>
         <button class="accordion">Lab 2</button>
         <div class="panel">
             <p><strong>Lab 2</strong>. Geography of Housing: 
@@ -66,5 +69,6 @@
 </body>
 
 </html>
+
 
 
