Add iframe styling for full width and height
Added style for iframe to ensure it occupies full width and height.

--- a/section1.html
+++ b/section1.html
@@ -12,6 +12,12 @@
 
     <!-- Meta tag for viewport scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <style>
+      iframe {
+        width: 100%;
+        height: 85vh;
+    }
+    </style>
 </head>
 
 <body>
@@ -69,6 +75,7 @@
 </body>
 
 </html>
+
 
 
 
