Fix HTML formatting and add iframe previews

--- a/section1.html
+++ b/section1.html
@@ -56,17 +56,26 @@
         <button class="accordion">Lab 2</button>
         <div class="panel">
             <p><strong>Lab 2</strong>. Geography of Housing: 
-                <a href="https://drive.google.com/file/d/18RyhD7tVVHwL3Z7h02FsuF713qGRzXYE/view" target="_blank">https://drive.google.com/file/d/18RyhD7tVVHwL3Z7h02FsuF713qGRzXYE/view</a></p>
+            <iframe src="https://drive.google.com/file/d/18RyhD7tVVHwL3Z7h02FsuF713qGRzXYE/preview"></iframe>
+            <a class="open-link" href="https://drive.google.com/file/d/18RyhD7tVVHwL3Z7h02FsuF713qGRzXYE/view" target="_blank">
+              Open Lab 2 PDF in new tab
+            </a>
         </div>
         <button class="accordion">Lab 3</button>
         <div class="panel">
             <p><strong>Lab 3</strong>. Geography of Housing: 
-                <a href="https://drive.google.com/file/d/1rKGy00EPPYlrd6zx2U_FmErIgKJ3xSKr/view" target="_blank">https://drive.google.com/file/d/1rKGy00EPPYlrd6zx2U_FmErIgKJ3xSKr/view</a></p>
+            <iframe src="https://drive.google.com/file/d/1rKGy00EPPYlrd6zx2U_FmErIgKJ3xSKr/preview"></iframe>
+            <a class="open-link" href="https://drive.google.com/file/d/1rKGy00EPPYlrd6zx2U_FmErIgKJ3xSKr/view" target="_blank">
+              Open Lab 3 PDF in new tab
+            </a>
         </div>
         <button class="accordion">Lab 4</button>
         <div class="panel">
             <p><strong>Lab 4</strong>. Geography of Housing: 
-                <a href="https://drive.google.com/file/d/1TuM4cc-XP56guIM3Q3OJqjnuoyk446U5/view" target="_blank">https://drive.google.com/file/d/1TuM4cc-XP56guIM3Q3OJqjnuoyk446U5/view</a></p>
+            <iframe src="https://drive.google.com/file/d/1TuM4cc-XP56guIM3Q3OJqjnuoyk446U5/preview"></iframe>
+            <a class="open-link" href="https://drive.google.com/file/d/1TuM4cc-XP56guIM3Q3OJqjnuoyk446U5/view" target="_blank">
+              Open PDF in new tab
+            </a>
         </div>
     </div>
     <!-- Including the main.js file for JavaScript functionality -->
@@ -75,6 +84,7 @@
 </body>
 
 </html>
+
 
 
 
