Add analysis section and update Lab references

--- a/section1.html
+++ b/section1.html
@@ -50,7 +50,7 @@
             <p><strong>Lab 1</strong>. Geography of Housing: 
             <iframe src="https://drive.google.com/file/d/1a2PFFvFBLSDf4atXnXTvnKaPlXQNyOXD/preview"></iframe>
             <a class="open-link" href="https://drive.google.com/file/d/1a2PFFvFBLSDf4atXnXTvnKaPlXQNyOXD/view" target="_blank">
-              Open Lab 1 PDF in new tab
+              Open Lab 1 PDF in a new tab
             </a>
           </div>
         <button class="accordion">Lab 2</button>
@@ -58,7 +58,7 @@
             <p><strong>Lab 2</strong>. Geography of Housing: 
             <iframe src="https://drive.google.com/file/d/18RyhD7tVVHwL3Z7h02FsuF713qGRzXYE/preview"></iframe>
             <a class="open-link" href="https://drive.google.com/file/d/18RyhD7tVVHwL3Z7h02FsuF713qGRzXYE/view" target="_blank">
-              Open Lab 2 PDF in new tab
+              Open Lab 2 PDF in a new tab
             </a>
         </div>
         <button class="accordion">Lab 3</button>
@@ -66,7 +66,7 @@
             <p><strong>Lab 3</strong>. Geography of Housing: 
             <iframe src="https://drive.google.com/file/d/1rKGy00EPPYlrd6zx2U_FmErIgKJ3xSKr/preview"></iframe>
             <a class="open-link" href="https://drive.google.com/file/d/1rKGy00EPPYlrd6zx2U_FmErIgKJ3xSKr/view" target="_blank">
-              Open Lab 3 PDF in new tab
+              Open Lab 3 PDF in a new tab
             </a>
         </div>
         <button class="accordion">Lab 4</button>
@@ -74,7 +74,15 @@
             <p><strong>Lab 4</strong>. Geography of Housing: 
             <iframe src="https://drive.google.com/file/d/1TuM4cc-XP56guIM3Q3OJqjnuoyk446U5/preview"></iframe>
             <a class="open-link" href="https://drive.google.com/file/d/1TuM4cc-XP56guIM3Q3OJqjnuoyk446U5/view" target="_blank">
-              Open PDF in new tab
+              Open Lab 4 PDF in a new tab
+            </a>
+        </div>
+        <button class="accordion">Analysis of Poverty in Seattle</button>
+        <div class="panel">
+            <p><strong>Analysis of Poverty in Seattle</strong>. Geography of Housing: 
+            <iframe src="https://drive.google.com/file/d/17BuSARVNOofmpbNcuOgG4fNIHSNZ3eoH/preview"></iframe>
+            <a class="open-link" href="https://drive.google.com/file/d/17BuSARVNOofmpbNcuOgG4fNIHSNZ3eoH/view" target="_blank">
+              Open PDF in a new tab
             </a>
         </div>
     </div>
@@ -84,6 +92,7 @@
 </body>
 
 </html>
+
 
 
 
