--- a/section2.html
+++ b/section2.html
@@ -38,16 +38,12 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 2 content -->
-        <h2>180 Emblems</h2>
-        <p>
-            In <i>Sonic Adventure 2</i>, there are 180 Emblems throughout the game available for a player to collect. The 180 emblems can be collected by clearing
-            levels, completing missions, collecting chaos emeralds, and through unlocked bonus/secret stages. For players looking to 100% complete the game
-            collecting the 180 emblems is essential. Collecting 180 emblems is considered a great achievement for players whether they are speedrunning or 
-            not. The "<b>180 Emblems</b>" category in <i>Sonic Adventure 2</i> speedrunning is considered a subcategory where the goal is not to necessarily beat the 
-            game but rather to complete the challenge of obtaining 180 Emblems. Many players play this category of speedrunning alongside "<b>Any%</b>" runs 
-            where any percent of the game can be completed. The community competing in this category has looked to optimize routes and plans to collect the 
-            180 Emblems as fast as possible creating skips and guides to reduce time.
-        </p>
+        <div class="panel">
+            <p><strong>Lab 1</strong>. Web Mapping: 
+            <iframe src="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fcameronsmutz%2Ftraffic-project&sa=D&sntz=1&usg=AOvVaw1plG9j6u6meiWazaQE3XuV"></iframe>
+            <a class="open-link" href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fcameronsmutz%2Ftraffic-project&sa=D&sntz=1&usg=AOvVaw1plG9j6u6meiWazaQE3XuV" target="_blank">
+              Open Lab 1 PDF in a new tab
+            </a>
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Useful Links for Page</button>
             <div id="myDropdown" class="dropdown-content">
@@ -62,4 +58,5 @@
 </body>
 
 </html>
+
 
