--- a/section2.html
+++ b/section2.html
@@ -38,13 +38,39 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 2 content --> 
+        References:
+        <button class="accordion">Traffic Project</button>
+        <div class="panel">
+            <p><strong>Traffic Project</strong>. Web Mapping: 
             <iframe src="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fcameronsmutz%2Ftraffic-project&sa=D&sntz=1&usg=AOvVaw1plG9j6u6meiWazaQE3XuV"></iframe>
-        <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Useful Links for Page</button>
-            <div id="myDropdown" class="dropdown-content">
-              <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=312189613" target="_blank">https://steamcommunity.com/sharedfiles/filedetails/?id=312189613</a>
-            </div>
+            <a class="open-link" href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fcameronsmutz%2Ftraffic-project&sa=D&sntz=1&usg=AOvVaw1plG9j6u6meiWazaQE3XuV" target="_blank">
+              Open project in a new tab
+            </a>
           </div>
+        <button class="accordion">U.S. Population</button>
+        <div class="panel">
+            <p><strong>U.S. Population</strong>. Web Mapping: 
+            <iframe src="https://peterp04.github.io/interactive-web-mapping/pop_density.html"></iframe>
+            <a class="open-link" href="https://peterp04.github.io/interactive-web-mapping/pop_density.html" target="_blank">
+              Open project in a new tab
+            </a>
+        </div>
+        <button class="accordion">COVID-19</button>
+        <div class="panel">
+            <p><strong>COVID-19</strong>. Web Mapping: 
+            <iframe src="https://peterp04.github.io/interactive-web-mapping/index.html"></iframe>
+            <a class="open-link" href="https://peterp04.github.io/interactive-web-mapping/index.html" target="_blank">
+              Open project in a new tab
+            </a>
+        </div>
+        <button class="accordion">Volcanoes</button>
+        <div class="panel">
+            <p><strong>Volanoes</strong>. Web Mapping: 
+            <iframe src="https://peterp04.github.io/geojson-data/index.html"></iframe>
+            <a class="open-link" href="https://peterp04.github.io/geojson-data/index.html" target="_blank">
+              Open project in a new tab
+            </a>
+        </div>
     </div>
 
     <!-- Including the main.js file for JavaScript functionality -->
@@ -53,6 +79,7 @@
 </body>
 
 </html>
+
 
 
 
