Add responsive iframe styles to section2.html
Added styles for iframes to ensure they are responsive and fill the height of the viewport.

--- a/section2.html
+++ b/section2.html
@@ -12,6 +12,13 @@
 
     <!-- Meta tag for viewport scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
+    <style>
+      iframe {
+        width: 100%;
+        height: 85vh;
+    }
+    </style>
 </head>
 
 <body>
@@ -79,6 +86,7 @@
 </body>
 
 </html>
+
 
 
 
