--- a/section3.html
+++ b/section3.html
@@ -12,6 +12,7 @@
 
     <!-- Meta tag for viewport scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
 </head>
 
 <body>
@@ -24,7 +25,7 @@
         <a href="section2.html">180 Emblems</a>
 
         <!-- Active link pointing to the section3.html page -->
-        <a class="active" href="section3.html">Any%</a>
+        <a class="active" href="section3.html">Visualizing Geospatial Data</a>
 
         <a href="see_also.html">See Also</a>
         <a href="references.html">References</a>
@@ -38,21 +39,30 @@
     <!-- Page content -->
     <div class="content">
         <!-- Section 3 content -->
-        <h2>Any%</h2>
-        <p>
-            A "<b>Any%</b>" speedrun is a staple among the speedrunning community as a whole with it being a popular choice for players across all videogames. 
-            The speedrunning category measures the time it takes to beat a game no matter how much of it is played. In the context of <i>Sonic Adventure 2</i>, 
-            Any% speedruns may consist of 100% completion of clearing levels or collecting emblems. Any% speedruns also include beating the game with or 
-            without skips often separating runs into subcategories like "<b>skipless</b>" or "<b>glitchless</b>". The most popular approach to an Any% speedrun 
-            is to use skips and glitches to find the fastest time possible to beat the game. The Any% category is a staple in the general speedrunning 
-            community and <i>Sonic Adventure 2</i> speedrunning is no exception. The Any% category provides <i>Sonic Adventure 2</i> speedrunners creative freedom 
-            to push boundaries on how fast the game can be beat.
-        </p>
-        <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Useful Links for Page</button>
-            <div id="myDropdown" class="dropdown-content">
-              <a href="https://www.speedrun.com/sa2b?h=Hero_Story-new-game&x=l824jg25-onvz40lm.4qy7x74q" target="_blank">https://www.speedrun.com/sa2b?h=Hero_Story-new-game&x=l824jg25-onvz40lm.4qy7x74q</a>
-            </div>
+        References:
+        <button class="accordion">Tableau</button>
+        <div class="panel">
+            <p><strong>Tableau</strong>. Data Visualization: 
+            <iframe src="https://public.tableau.com/app/profile/peter.pham8638/vizzes"></iframe>
+            <a class="open-link" href="https://public.tableau.com/app/profile/peter.pham8638/vizzes" target="_blank">
+              Open project in a new tab
+            </a>
+          </div>
+        <button class="accordion">Geospatial AI</button>
+        <div class="panel">
+            <p><strong>Geospatial AI</strong>. Data Visualization: 
+            <iframe src="https://colab.research.google.com/drive/1YjUBv7_Y2tjYGueOd8AluZgnN4gRiaC4?usp=sharing"></iframe>
+            <a class="open-link" href="https://colab.research.google.com/drive/1YjUBv7_Y2tjYGueOd8AluZgnN4gRiaC4?usp=sharing" target="_blank">
+              Open project in a new tab
+            </a>
+        </div>
+        <button class="accordion">Visualizing Seattle</button>
+        <div class="panel">
+            <p><strong>Visualizing Seattle</strong>. Data Visualization: 
+            <iframe src="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fuw.edu%2Fgeog-450-portfolio%2Fhome&sa=D&sntz=1&usg=AOvVaw3hPBx94NqN120K2Kj01_C2"></iframe>
+            <a class="open-link" href="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fuw.edu%2Fgeog-450-portfolio%2Fhome&sa=D&sntz=1&usg=AOvVaw3hPBx94NqN120K2Kj01_C2" target="_blank">
+              Open project in a new tab
+            </a>
           </div>
     </div>
 
@@ -62,4 +72,5 @@
 </body>
 
 </html>
+
 
