--- a/section3.html
+++ b/section3.html
@@ -13,6 +13,12 @@
     <!-- Meta tag for viewport scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
+    <style>
+      iframe {
+        width: 100%;
+        height: 85vh;
+    }
+    </style>
 </head>
 
 <body>
@@ -72,5 +78,6 @@
 </body>
 
 </html>
+
 
 
