--- a/section3.html
+++ b/section3.html
@@ -12,13 +12,6 @@
 
     <!-- Meta tag for viewport scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
-    <style>
-      iframe {
-        width: 100%;
-        height: 85vh;
-    }
-    </style>
 </head>
 
 <body>
@@ -49,8 +42,7 @@
         <button class="accordion">Tableau</button>
         <div class="panel">
             <p><strong>Tableau</strong>. Data Visualization: 
-            <iframe src="https://public.tableau.com/app/profile/peter.pham8638/vizzes"></iframe>
-            <a class="open-link" href="https://public.tableau.com/app/profile/peter.pham8638/vizzes" target="_blank">
+            <a href="https://public.tableau.com/app/profile/peter.pham8638/vizzes"></a> target="_blank">
               Open project in a new tab
             </a>
           </div>
@@ -78,6 +70,7 @@
 </body>
 
 </html>
+
 
 
 
