--- a/section3.html
+++ b/section3.html
@@ -42,7 +42,7 @@
         <button class="accordion">Tableau</button>
         <div class="panel">
             <p><strong>Tableau</strong>. Data Visualization: 
-            <a href="https://public.tableau.com/app/profile/peter.pham8638/vizzes"></a> target="_blank">
+            <a href="https://public.tableau.com/app/profile/peter.pham8638/vizzes" target="_blank">
               Open project in a new tab
             </a>
           </div>
@@ -70,6 +70,7 @@
 </body>
 
 </html>
+
 
 
 
