Fix HTML formatting and structure in section3.html

--- a/section3.html
+++ b/section3.html
@@ -49,16 +49,14 @@
         <button class="accordion">Geospatial AI</button>
         <div class="panel">
             <p><strong>Geospatial AI</strong>. Data Visualization: 
-            <iframe src="https://colab.research.google.com/drive/1YjUBv7_Y2tjYGueOd8AluZgnN4gRiaC4?usp=sharing"></iframe>
-            <a class="open-link" href="https://colab.research.google.com/drive/1YjUBv7_Y2tjYGueOd8AluZgnN4gRiaC4?usp=sharing" target="_blank">
+            <a href="https://colab.research.google.com/drive/1YjUBv7_Y2tjYGueOd8AluZgnN4gRiaC4?usp=sharing" target="_blank">
               Open project in a new tab
             </a>
         </div>
         <button class="accordion">Visualizing Seattle</button>
         <div class="panel">
             <p><strong>Visualizing Seattle</strong>. Data Visualization: 
-            <iframe src="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fuw.edu%2Fgeog-450-portfolio%2Fhome&sa=D&sntz=1&usg=AOvVaw3hPBx94NqN120K2Kj01_C2"></iframe>
-            <a class="open-link" href="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fuw.edu%2Fgeog-450-portfolio%2Fhome&sa=D&sntz=1&usg=AOvVaw3hPBx94NqN120K2Kj01_C2" target="_blank">
+            <a href="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fuw.edu%2Fgeog-450-portfolio%2Fhome&sa=D&sntz=1&usg=AOvVaw3hPBx94NqN120K2Kj01_C2" target="_blank">
               Open project in a new tab
             </a>
           </div>
@@ -70,6 +68,7 @@
 </body>
 
 </html>
+
 
 
 
