--- a/section4.html
+++ b/section4.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Sonic Adventure 2 Speedruns</title>
+    <title>Peter Pham Portfolio</title>
 
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
@@ -68,3 +68,4 @@
 </body>
 
 </html>
+
