Add references section with accordion functionality
Added new references section with accordion buttons for various academic studies.

--- a/section4.html
+++ b/section4.html
@@ -37,28 +37,30 @@
 
     <!-- Page content -->
     <div class="content">
-        <!-- See Also section content -->
-        Guides and resources for Sonic Adventure 2 speedruns:
-        <div class="card">
-            <img src="https://th.bing.com/th/id/OIP.s0BVS7tR_lAdS18cFgCIRQHaEU?w=313&h=183&c=7&r=0&o=5&pid=1.7" alt="Avatar" style="width:100%">
-            <div class="container">
-              <h4><b>Speedrun Charts</b></h4>
-              <p><a href="https://www.speedrun.com/sa2b?h=Hero_Story-new-game&x=l824jg25-onvz40lm.4qy7x74q" target="_blank">Speedrun Charts</a></p>
-            </div>
+        References:
+        <button class="accordion">Geographic VR Simulations and Real-Time Data</button>
+        <div class="panel">
+            <p><strong>Geographic VR Simulations and Real-Time Data</strong>. Academic Studies: 
+            <iframe src="https://drive.google.com/file/d/1H1zXM3mNA1yxZ8-ulYtZHtFfJbjtRjAo/preview"></iframe>
+            <a class="open-link" href="https://drive.google.com/file/d/1H1zXM3mNA1yxZ8-ulYtZHtFfJbjtRjAo/view" target="_blank">
+              Open project in a new tab
+            </a>
           </div>
-        <div class="card">
-            <img src="https://i.ytimg.com/vi/3L8Zp19Ml4E/maxresdefault.jpg" alt="Avatar" style="width:100%">
-            <div class="container">
-              <h4><b>Emblem Guide</b></h4>
-              <p><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=312189613" target="_blank">Emblem Guide</a></p>
-            </div>
-          </div>
-        <div class="card">
-            <img src="https://tse1.mm.bing.net/th?&id=OVP.yGEg2BN3h9Tt4JBfD2RafgHgFo&w=528&h=298&c=7&pid=1.7&rs=1" alt="Avatar" style="width:100%">
-            <div class="container">
-              <h4><b>Hero Story WR</b></h4>
-              <p><a href="https://www.youtube.com/watch?v=GuH0KV8W2tw" target="_blank">Hero Story WR</a></p>
-            </div>
+        <button class="accordion">StoryMap on Boeing</button>
+        <div class="panel">
+            <p><strong>StoryMap on Boeing</strong>. Academic Studies: 
+            <iframe src="https://drive.google.com/file/d/1H1zXM3mNA1yxZ8-ulYtZHtFfJbjtRjAo/preview"></iframe>
+            <a class="open-link" href="https://drive.google.com/file/d/1H1zXM3mNA1yxZ8-ulYtZHtFfJbjtRjAo/view" target="_blank">
+              Open project in a new tab
+            </a>
+        </div>
+        <button class="accordion">Ferility Rates Study</button>
+        <div class="panel">
+            <p><strong>Fertility Rates Study</strong>. Academic Studies: 
+            <iframe src="https://drive.google.com/file/d/10xizEzSo9Bi2hH85ZSoSgOu4DPddTGMO/preview"></iframe>
+            <a class="open-link" href="https://drive.google.com/file/d/10xizEzSo9Bi2hH85ZSoSgOu4DPddTGMO/view" target="_blank">
+              Open project in a new tab
+            </a>
           </div>
     </div>
 
@@ -68,4 +70,5 @@
 </body>
 
 </html>
+
 
