Fix navigation link to point to section4.html

--- a/section4.html
+++ b/section4.html
@@ -25,7 +25,7 @@
         <a href="section3.html">Any%</a>
 
         <!-- Active link pointing to the see_also.html page -->
-        <a class="active" href="see_also.html">See Also</a>
+        <a class="active" href="section4.html">Academic Studies</a>
 
         <a href="references.html">References</a>
 
@@ -70,5 +70,6 @@
 </body>
 
 </html>
+
 
 
