--- a/section3.html
+++ b/section3.html
@@ -26,7 +26,7 @@
         <!-- Active link pointing to the section3.html page -->
         <a class="active" href="section3.html">Visualizing Geospatial Data</a>
 
-        <a href="see_also.html">See Also</a>
+        <a href="section4.html">Academic Studies</a>
         <a href="references.html">References</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
@@ -68,6 +68,7 @@
 </body>
 
 </html>
+
 
 
 
