--- a/section4.html
+++ b/section4.html
@@ -12,6 +12,13 @@
 
     <!-- Meta tag for viewport scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
+     <style>
+      iframe {
+        width: 100%;
+        height: 85vh;
+    }
+    </style>
 </head>
 
 <body>
@@ -70,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
