Update navigation links and content in index.html

--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
         <a class="active" href="index.html">Abstract</a>
 
         <!-- Links to other sections -->
-        <a href="section1.html">Hero/Dark Story</a>
-        <a href="section2.html">180 Emblems</a>
-        <a href="section3.html">Any%</a>
-
-        <!-- Additional links -->
-        <a href="see_also.html">See Also</a>
-        <a href="references.html">References</a>
+        <a href="section1.html">Geography of Housing</a>
+        <a href="section2.html">Web Mapping</a>
+        <a href="section3.html">Data Visualization</a>
+        <a href="section4.html">Academic Studies</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
@@ -49,7 +46,6 @@
             <button onclick="myFunction()" class="dropbtn">Useful Links for Page</button>
             <div id="myDropdown" class="dropdown-content">
               <a href="www.linkedin.com/in/peter-pham-984817390" target="_blank">www.linkedin.com/in/peter-pham-984817390</a>
-              <a href="https://www.gamesradar.com/sonic-3-tease-sonic-adventure-2-inspiration/" target="_blank">https://www.gamesradar.com/sonic-3-tease-sonic-adventure-2-inspiration/</a>
             </div>
           </div>
     </div>
@@ -60,5 +56,6 @@
 </body>
 
 </html>
+
 
 
