--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         My work focuses on transforming geographic and demographic data into clear, meaningful insights through maps, dashboards, and web-based visualizations. 
         This portfolio highlights academic research and applied projects that demonstrate my technical skills, analytical thinking, and commitment to data-driven 
         decision making in areas such as equity, transportation, and environmental analysis.
+
+        Portfolio: <a href="https://sites.google.com/view/peterphamportfolio/home" target-"_blank">Google Sites Version</a>
         <br>
-        Portfolio: <a href="https://sites.google.com/view/peterphamportfolio/home" target-"_blank">Google Sites ver</a>
         <br>
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Useful Links for Page</button>
@@ -57,6 +58,7 @@
 </body>
 
 </html>
+
 
 
 
