--- a/section1.html
+++ b/section1.html
@@ -12,6 +12,7 @@
 
     <!-- Meta tag for viewport scaling -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    
     <style>
       iframe {
         width: 100%;
@@ -30,10 +31,9 @@
         <!-- Active link pointing to the section1.html page -->
         <a class="active" href="section1.html">Geography of Housing</a>
 
-        <a href="section2.html">180 Emblems</a>
-        <a href="section3.html">Any%</a>
-        <a href="see_also.html">See Also</a>
-        <a href="references.html">References</a>
+        <a href="section2.html">Web Mapping</a>
+        <a href="section3.html">Data Visualizations</a>
+        <a href="section4.html">Academic Studies</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
@@ -92,6 +92,7 @@
 </body>
 
 </html>
+
 
 
 
