Update navigation and content in section2.html

--- a/section2.html
+++ b/section2.html
@@ -27,14 +27,13 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Abstract</a>
-        <a href="section1.html">Hero/Dark Story</a>
+        <a href="section1.html">Geography of Housing</a>
 
         <!-- Active link pointing to the section2.html page -->
-        <a class="active" href="section2.html">180 Emblems</a>
+        <a class="active" href="section2.html">Web Mapping</a>
 
-        <a href="section3.html">Any%</a>
-        <a href="see_also.html">See Also</a>
-        <a href="references.html">References</a>
+        <a href="section3.html">Data Visualizations</a>
+        <a href="see_also.html">Academic Studies</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
@@ -86,6 +85,7 @@
 </body>
 
 </html>
+
 
 
 
