Update navigation links and content in section3.html

--- a/section3.html
+++ b/section3.html
@@ -20,14 +20,13 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Abstract</a>
-        <a href="section1.html">Hero/Dark Story</a>
-        <a href="section2.html">180 Emblems</a>
+        <a href="section1.html">Geography of Housing</a>
+        <a href="section2.html">Web Mapping</a>
 
         <!-- Active link pointing to the section3.html page -->
         <a class="active" href="section3.html">Visualizing Geospatial Data</a>
 
         <a href="section4.html">Academic Studies</a>
-        <a href="references.html">References</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
@@ -68,6 +67,7 @@
 </body>
 
 </html>
+
 
 
 
