--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Links to other sections -->
         <a href="section1.html">Geography of Housing</a>
         <a href="section2.html">Web Mapping</a>
-        <a href="section3.html">Data Visualization</a>
+        <a href="section3.html">Visualizing Geospatial Data</a>
         <a href="section4.html">Academic Studies</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
@@ -59,6 +59,7 @@
 </body>
 
 </html>
+
 
 
 
