Update section1.html with new content and links

--- a/section1.html
+++ b/section1.html
@@ -32,7 +32,7 @@
         <a class="active" href="section1.html">Geography of Housing</a>
 
         <a href="section2.html">Web Mapping</a>
-        <a href="section3.html">Data Visualizations</a>
+        <a href="section3.html">Visualizing Geospatial Data</a>
         <a href="section4.html">Academic Studies</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
@@ -92,6 +92,7 @@
 </body>
 
 </html>
+
 
 
 
