Fix navigation links and typos in section2.html
Updated navigation links and fixed typos in section2.html.

--- a/section2.html
+++ b/section2.html
@@ -32,7 +32,7 @@
         <!-- Active link pointing to the section2.html page -->
         <a class="active" href="section2.html">Web Mapping</a>
 
-        <a href="section3.html">Data Visualizations</a>
+        <a href="section3.html">Visualizing Geospatial Data</a>
         <a href="see_also.html">Academic Studies</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
@@ -85,6 +85,7 @@
 </body>
 
 </html>
+
 
 
 
