--- a/section4.html
+++ b/section4.html
@@ -27,9 +27,9 @@
     <div class="topnav" id="myTopnav">
         <!-- Links to different sections -->
         <a href="index.html">Abstract</a>
-        <a href="section1.html">Hero/Dark Story</a>
-        <a href="section2.html">180 Emblems</a>
-        <a href="section3.html">Any%</a>
+        <a href="section1.html">Geography of Housing</a>
+        <a href="section2.html">Web Mapping</a>
+        <a href="section3.html">Visualizing Geospatial Data</a>
 
         <!-- Active link pointing to the see_also.html page -->
         <a class="active" href="section4.html">Academic Studies</a>
@@ -77,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
