--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Useful Links for Page</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="www.linkedin.com/in/peter-pham-984817390" target="_blank">www.linkedin.com/in/peter-pham-984817390</a>
+              <a href="https://www.linkedin.com/in/peter-pham-984817390" target="_blank">LinkedIn Profile</a>
             </div>
           </div>
     </div>
@@ -59,6 +59,7 @@
 </body>
 
 </html>
+
 
 
 
