Fix HTML formatting and update project links

--- a/section2.html
+++ b/section2.html
@@ -48,8 +48,7 @@
         <button class="accordion">Traffic Project</button>
         <div class="panel">
             <p><strong>Traffic Project</strong>. Web Mapping: 
-            <iframe src="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fcameronsmutz%2Ftraffic-project&sa=D&sntz=1&usg=AOvVaw1plG9j6u6meiWazaQE3XuV"></iframe>
-            <a class="open-link" href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fcameronsmutz%2Ftraffic-project&sa=D&sntz=1&usg=AOvVaw1plG9j6u6meiWazaQE3XuV" target="_blank">
+            <a href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fcameronsmutz%2Ftraffic-project&sa=D&sntz=1&usg=AOvVaw1plG9j6u6meiWazaQE3XuV" target="_blank">
               Open project in a new tab
             </a>
           </div>
@@ -85,6 +84,7 @@
 </body>
 
 </html>
+
 
 
 
