--- a/section2.html
+++ b/section2.html
@@ -33,7 +33,7 @@
         <a class="active" href="section2.html">Web Mapping</a>
 
         <a href="section3.html">Visualizing Geospatial Data</a>
-        <a href="see_also.html">Academic Studies</a>
+        <a href="section4.html">Academic Studies</a>
 
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links on smaller screens -->
         <a href="javascript:void(0);" class="icon">
@@ -84,6 +84,7 @@
 </body>
 
 </html>
+
 
 
 
