--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Page content -->
     <div class="content">
         <!-- Abstract section --> 
-        <h2>Abstract</h2>
+        <h2>Peter Pham Portfolio</h2>
         My work focuses on transforming geographic and demographic data into clear, meaningful insights through maps, dashboards, and web-based visualizations. 
         This portfolio highlights academic research and applied projects that demonstrate my technical skills, analytical thinking, and commitment to data-driven 
         decision making in areas such as equity, transportation, and environmental analysis.
@@ -59,6 +59,7 @@
 </body>
 
 </html>
+
 
 
 
