--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>Peter Pham Portfolio</title>
 
+    <link rel="icon" type="image/png" href="assets/Traffic_Project_Favicon.png">
+    
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
 
@@ -59,6 +61,7 @@
 </body>
 
 </html>
+
 
 
 
