--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Peter Pham Portfolio</title>
 
-    <link rel="icon" type="image/png" href="assets/Traffic_Project_Favicon.png">
+    <link rel="icon" type="image/png" href="assets/UW-Logo.png">
     
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
@@ -61,6 +61,7 @@
 </body>
 
 </html>
+
 
 
 
