--- a/section3.html
+++ b/section3.html
@@ -4,6 +4,8 @@
 <head>
     <title>Peter Pham Portfolio</title>
 
+    <link rel="icon" type="image/png" href="assets/UW-Logo.png">
+    
     <!-- Including the main.css file for styling -->
     <link rel="stylesheet" href="css/main.css">
 
@@ -67,6 +69,7 @@
 </body>
 
 </html>
+
 
 
 
