--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <button onclick="myFunction()" class="dropbtn">Useful Links for Page</button>
             <div id="myDropdown" class="dropdown-content">
               <a href="https://www.linkedin.com/in/peter-pham-984817390" target="_blank">LinkedIn Profile</a>
+              <a href="https://github.com/PeterP04" target="_blank">GitHub</a>
             </div>
           </div>
     </div>
@@ -61,6 +62,7 @@
 </body>
 
 </html>
+
 
 
 
